<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoAboutMe">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:text="@string/info0"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:gravity="center"
            android:text="@string/info1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="21sp"
            android:typeface="normal"
            app:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/info2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"
            android:textSize="24sp"
            android:typeface="normal"
            app:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/info3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="21sp"
            android:typeface="normal"
            app:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/info4"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="21sp"
            android:typeface="normal"
            app:fontFamily="sans-serif" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>